[package]
name = "actix-http-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.19.0", features = ["rt-tokio-current-thread"]}
opentelemetry-otlp = { version = "0.12.0" }
actix-web = "4.1.0"
actix-service = "2.0.0"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
